Validate otherViewName in OtherViewsFilter